# codex-sessions

./: .dockerignore  .gitignore  .sops.yaml  Cargo.toml  Dockerfile  README.md  compose.yaml  flake.nix
crates/archive-agent/: Cargo.toml
crates/archive-agent/src/: main.rs
crates/archive-core/: Cargo.toml
crates/archive-core/src/: chunk.rs  hash.rs  ingest.rs  lib.rs  rollout.rs
crates/archive-server/: Cargo.toml
crates/archive-server/migrations/: 0001_initial.sql  0002_operability.sql  0003_embedding_batches.sql  0004_archive_completeness.sql  0005_status_perf.sql
crates/archive-server/src/: main.rs
nix/home-manager/: archive-agent.nix
nix/nixos/: archive-server.nix
scripts/: dev-down  dev-env  dev-up  e2e-test  load-nix-image
secrets/: README.md  dev.enc.yaml
